syntax = "proto3";

package auth;


service AuthService {
  rpc SignUp(SignUpRequest) returns (SignUpResponse) {}
  rpc Login(LoginReqeust) returns (LoginResponse) {}
  rpc RessetPassword(RessetPasswordRequest) returns (RessetPasswordResponse){}
}

message SignUpRequest {
  
}

message SignUpResponse {

}


message LoginReqeust {

}

message LoginResponse {

}


message RessetPasswordRequest {

}

message RessetPasswordResponse {

}





